package com.ems.interfaces;

/** Contract for anything that earns and can compute a salary. */
public interface Payable {
    double calculateSalary();
}
